export class Branch {
  id: string;
  cnpj: string;
  name: string;
  addressId: string;
  institutionId: string;
  slug: string;
  createdAt: Date;
  updatedAt: Date;
}
