export class Course {
  id: string;
  name: string;
  branchId: string;
  totalGrade: number;
  createdAt: Date;
  updatedAt: Date;
}
