export class Module {
  id: string;
  name: string;
  duration: number;
  subject: string;
  grade: number;
  courseId: string;
  createdAt: Date;
  updatedAt: Date;
}
