export class UserCourse {
  userId: string;
  courseId: string;
  createdAt: Date;
  updatedAt: Date;
}
