export class User {
  id: string;
  name: string;
  rg: string;
  cpf: string;
  bornDate: Date;
  addressId: string;
  phoneNumber: string;
  email: string;
  password: string;
  createdAt: string;
  updatedAt: string;
}
